--- a/public/index.html
+++ b/public/index.html
@@ -23,19 +23,19 @@
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
-    <meta name="description" content="Pytalks is an independent website design &amp; development in Dublin, Ireland."/>
+    <meta name="description" content="PyTalks helps you search and filter Python talks."/>
     <link rel="canonical" href="https://pytalks.com" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Pytalks | Independent Web Design &amp; Development in Dublin, Ireland" />
-    <meta property="og:description" content="We partner with brands to help them attract, convert, and retain customers. Specializing in user experience design and thinking." />
+    <meta property="og:title" content="PyTalks | List of all Python talks" />
+    <meta property="og:description" content="We organize Python talk to help developers search, manage and filter through them easily." />
     <meta property="og:url" content="https://pytalks.com" />
-    <meta property="og:site_name" content="Pytalks" />
+    <meta property="og:site_name" content="PyTalks" />
     <meta property="og:image" content="%PUBLIC_URL%/favicon-196x196.png" />
     <meta property="og:image:secure_url" content="%PUBLIC_URL%/favicon-196x196.png" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Pytalks is an independent website design &amp; development in Dublin, Ireland" />
-    <meta name="twitter:title" content="Pytalks | Web Design &amp; Development in Dublin, Ireland" />
+    <meta name="twitter:description" content="PyTalks helps you search and filter Python talks" />
+    <meta name="twitter:title" content="PyTalks | List of all Python talks" />
     <meta name="twitter:site" content="@pytalks" />
     <meta name="twitter:image" content="%PUBLIC_URL%/favicon-196x196.png" />
     <meta name="twitter:creator" content="@pytalks" />
